# igw

./: .gitignore  Cargo.toml  README.md
examples/: gateway_demo.rs
src/: core.rs  lib.rs  main.rs  protocols.rs
src/codec/: byte_order.rs
src/core/: data.rs  logging.rs  metadata.rs  slot.rs  traits.rs
src/gateway/: address.rs  factory.rs
src/protocols/: can.rs  command_batcher.rs  gpio.rs  iec104.rs  mod.rs  modbus.rs  opcua.rs  virtual_channel.rs
src/protocols/can/: client.rs  config.rs  decoder.rs
src/protocols/can/j1939/: client.rs
src/store/: memory.rs  mod.rs  traits.rs
