[package]
name = "igw"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Industrial Gateway - Universal SCADA Protocol Library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EvanL1/igw"
keywords = ["scada", "industrial", "protocols", "four-remote", "gateway"]
categories = ["embedded", "network-programming", "hardware-support"]
readme = "README.md"

[features]
default = []

# Protocol support
modbus = ["dep:voltage_modbus"]
iec104 = ["dep:voltage_iec104"]
j1939 = ["dep:socketcan", "dep:voltage_j1939"]
opcua = ["dep:async-opcua"]

# Virtual channel (no external deps)
virtual-channel = []

# GPIO support (Linux only, stub implementation for other platforms)
gpio = []

# Transport options
serial = ["dep:tokio-serial"]

# Utilities
tracing-support = ["dep:tracing"]

# Full feature set
full = ["modbus", "iec104", "j1939", "opcua", "serial", "tracing-support", "virtual-channel", "gpio"]

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Byte manipulation
bytes = "1"

# Concurrent data structures
dashmap = "6"

# Optional: Serial port support
tokio-serial = { version = "5", optional = true }

# Optional: Tracing
tracing = { version = "0.1", optional = true }

# Optional: Modbus protocol support
voltage_modbus = { version = "0.4", optional = true }

# Optional: IEC 60870-5-104 protocol support
voltage_iec104 = { version = "0.1", optional = true }

# Optional: OPC UA protocol support
async-opcua = { version = "0.14", default-features = false, features = ["client"], optional = true }

# Optional: J1939/CAN protocol support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.3", optional = true }
voltage_j1939 = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
