[package]
name = "igw"
version = "0.2.9"
edition = "2021"
rust-version = "1.85"
description = "Industrial Gateway - Universal SCADA Protocol Library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EvanL1/igw"
keywords = ["scada", "industrial", "protocols", "four-remote", "gateway"]
categories = ["embedded", "network-programming", "hardware-support"]
readme = "README.md"

[[bin]]
name = "igw"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []

# Protocol support
modbus = ["modbus-tcp"]  # Backward compatible alias
modbus-tcp = ["dep:voltage_modbus", "tracing-support"]
modbus-rtu = ["modbus-tcp", "voltage_modbus/rtu"]
iec104 = ["dep:voltage_iec104"]
j1939 = ["dep:socketcan", "dep:voltage_j1939"]
can = ["dep:socketcan", "tracing-support"]  # LYNK CAN protocol
opcua = ["dep:async-opcua"]

# Virtual channel (no external deps)
virtual-channel = []

# GPIO support (Linux only, stub implementation for other platforms)
gpio = ["dep:tokio-gpiod"]

# Transport options
serial = ["dep:tokio-serial"]

# Utilities
tracing-support = ["dep:tracing"]

# CLI support
cli = ["dep:clap", "dep:toml"]

# Full feature set
full = ["modbus-tcp", "modbus-rtu", "iec104", "j1939", "can", "opcua", "serial", "tracing-support", "virtual-channel", "gpio"]

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros", "signal"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Byte manipulation
bytes = "1"

# CSV parsing (for CAN protocol)
csv = "1"

# Concurrent data structures
dashmap = "6"

# Lazy static initialization
once_cell = "1"

# Optional: Serial port support
tokio-serial = { version = "5", optional = true }

# Optional: Tracing
tracing = { version = "0.1", optional = true }

# Optional: Modbus protocol support
voltage_modbus = { version = "0.4", optional = true }

# Optional: IEC 60870-5-104 protocol support
voltage_iec104 = { version = "0.1", optional = true }

# Optional: OPC UA protocol support
async-opcua = { version = "0.14", default-features = false, features = ["client"], optional = true }

# Optional: CLI support
clap = { version = "4", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

# Optional: J1939/CAN protocol support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5", optional = true }
voltage_j1939 = { version = "0.1", optional = true }
tokio-gpiod = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
